[package]
name = "quaternions"
version = "0.5.0-a2"
authors = [
    "Jon <jiyinyiyong@gmail.com>"
]
edition = "2021"
keywords = ["quaternion", "math", "piston"]
description = "simple quaternion arithmetic with traits"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/crate/quaternions/"
repository = "https://github.com/Quaterfoil-GL/quaternion.git"
homepage = "https://github.com/Quaterfoil-GL/quaternion"

[lib]

name = "quaternions"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2"
