[package]
name = "quaternions"
version = "0.5.0"
authors = ["Jon <jiyinyiyong@gmail.com>"]
edition = "2021"
keywords = ["quaternion", "math", "piston"]
description = "simple quaternion arithmetic with traits"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/crate/quaternions/"
repository = "https://github.com/Quatrefoil-GL/quaternions.git"
homepage = "https://github.com/Quatrefoil-GL/quaternions"

[lib]

name = "quaternions"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2"
